--- a/HnTrends/Views/Home/Index.cshtml
+++ b/HnTrends/Views/Home/Index.cshtml
@@ -1,14 +1,15 @@
 ﻿@model IndexViewModel
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Search";
 }
 
-This will display the number of posts per day containing a given term.
-<hr/>
+<h3>Search</h3>
 
-<form asp-controller="Home" asp-action="Trend" method="post">
+<p>Search for a given term in stories submitted to Hacker News per day.</p>
+
+<form asp-controller="Home" asp-action="Trend" method="get">
     <label for="search">Enter a search term:</label>
-    <input asp-for="Term" type="text" min="2" id="search" />
+    <input name="id" type="text" min="2" id="search" />
     <button type="submit">Search</button>
 </form>
 
