--- a/HnTrends/wwwroot/css/site.css
+++ b/HnTrends/wwwroot/css/site.css
@@ -1,37 +1,41 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
-for details on configuring this project to bundle and minify static web assets. */
+﻿.remark {
+    font-style: italic;
+    font-size: 0.9em;
+    color: #AAA;
+    margin-bottom: 15px;
+    margin-top: -10px;
+}
+
 body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    margin: 0;
+    padding: 0;
 }
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+.container {
+    width: 90%;
+    max-width: 1200px;
 }
 
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
-}
-
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
+nav {
     width: 100%;
+    height: 72px;
+    background-color: #0984e3;
+    margin-bottom: 30px;
 }
 
-/* QR code generator */
-#qrCode {
-    margin: 15px;
-}
-
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none;
+    nav > a:first-child {
+        color: #FEFEFE;
+        font-size: 1.6em;
+        text-decoration: none;
+        line-height: 65px;
+        margin-left: 25px;
+        font-weight: bold;
     }
-}
+
+    #percent {
+        font-size: 9px;
+        color: #AAA;
+        line-height: 25px;
+        height: 25px;
+        padding: 0 5px;
+    }
