use sqlite to store and retrieve data

--- a/HnTrends/Views/Home/Trend.cshtml
+++ b/HnTrends/Views/Home/Trend.cshtml
@@ -64,7 +64,7 @@ else
         }
 
         function getModeBarSettings() {
-            return { modeBarButtonsToRemove: ['toImage', 'pan2d', 'lasso2d', 'autoScale2d', 'toggleSpikelines'] };
+            return { modeBarButtonsToRemove: ['toImage', 'pan2d', 'lasso2d', 'autoScale2d', 'toggleSpikelines', 'select2d'] };
         }
 
         function getPlotlyData(data, isCount) {
