--- a/HnTrends/Views/Shared/_Layout.cshtml
+++ b/HnTrends/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     <div class="container">
         @RenderBody()
     </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
             asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
             asp-fallback-test="window.jQuery"
