--- a/src/HnTrends/Views/Home/Index.cshtml
+++ b/src/HnTrends/Views/Home/Index.cshtml
@@ -5,7 +5,10 @@
 
 <h3>Search</h3>
 
-<p>Search for a given term in stories submitted to Hacker News per day.</p>
+<p>Search for a given term in our database of @Model.StoryCount.ToString("N0") stories submitted to 
+    <a href="https://news.ycombinator.com/" target="_blank">Hacker News</a>.</p>
+
+<p>Stories are matched to the search term using the URL or Title, the story content isn't indexed. This also excludes "Ask HN" style posts.</p>
 
 <form asp-controller="Home" asp-action="Trend" method="get">
     <label for="search">Enter a search term:</label>
