--- a/src/HnTrends/wwwroot/css/site.css
+++ b/src/HnTrends/wwwroot/css/site.css
@@ -33,13 +33,14 @@ nav {
     }
 
     #percent {
-        font-size: 9px;
+        font-size: 10px;
         color: #AAA;
-        line-height: 25px;
-        height: 25px;
+        line-height: 36px;
+        height: 36px;
         padding: 0 5px;
+        margin-top: 0.5rem;
     }
 
 p {
-    margin-bottom: 1rem;
+    margin-bottom: 1.2rem;
 }
