--- a/src/HnTrends/Views/Home/Index.cshtml
+++ b/src/HnTrends/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
 
 <h3>Search</h3>
 
-<p>Search for a given term in our database of @Model.StoryCount.ToString("N0") stories submitted to 
-    <a href="https://news.ycombinator.com/" target="_blank">Hacker News</a>.</p>
+<p>Search for occurrences of a term in our database of @Model.StoryCount.ToString("N0") stories submitted to 
+    <a href="https://news.ycombinator.com/" target="_blank">Hacker News</a> since 2006.</p>
 
 <p>Stories are matched to the search term using the URL or Title, the story content isn't indexed. This also excludes "Ask HN" style posts.</p>
 
