order classes into directories in web project
splits services and viewmodels from the root to the corresponding directory.

updates styling of navbar.

changes styling of plotly lines and markers.

--- a/src/HnTrends/Views/Home/Trend.cshtml
+++ b/src/HnTrends/Views/Home/Trend.cshtml
@@ -177,7 +177,13 @@ else
                     x: data.x,
                     y: isCount ? data.y : data.yPercent,
                     type: 'scatter',
-                    mode: period !== "Day" ? 'lines' : 'markers'
+                    mode: period !== "Day" ? 'lines' : 'markers',
+                    marker: {
+                        size: 3
+                    },
+                    line: {
+                        width: period === "Month" ? 2 : 1
+                    }
                 }
             ];
         }
