update background service to use real indexer and crawler
previously we were using a dummy task to check the background task was running, now it actually indexes.

start adding api endpoints to retrieve the real data.

--- a/src/HnTrends/Views/Home/Trend.cshtml
+++ b/src/HnTrends/Views/Home/Trend.cshtml
@@ -44,6 +44,17 @@ else
         function loadDataFromHiddenInput() {
             var str = $("#data-load").val();
             var json = JSON.parse(str);
+            var start = moment(json.Start);
+            console.log(start);
+            var dates = [];
+            for (var i = 0; i < json.Counts.length; i++) {
+                dates.push(start.toDate());
+                start.add(1, 'd');
+            }
+
+            console.log(dates);
+
+            json.Dates = dates;
             return json;
         }
 
