add search recommendations to front page
these help people get started.

also add log file prefix to gitignore.

--- a/src/HnTrends/Views/Home/Index.cshtml
+++ b/src/HnTrends/Views/Home/Index.cshtml
@@ -16,3 +16,15 @@
     <button type="submit">Search</button>
 </form>
 
+<p>
+    Not sure what to search? Why not try:
+    <ul>
+        <li><a asp-action="Trend" asp-route-id="Keras">Keras</a></li>
+        <li><a asp-action="Trend" asp-route-id="Tensorflow">Tensorflow</a></li>
+        <li><a asp-action="Trend" asp-route-id="Rust">Rust</a></li>
+        <li><a asp-action="Trend" asp-route-id="OpenAI">OpenAI</a></li>
+        <li><a asp-action="Trend" asp-route-id="PyTorch">PyTorch</a></li>
+        <li><a asp-action="Trend" asp-route-id="Laravel">Laravel</a></li>
+    </ul>
+</p>
+
