rename multiterm to allwords since this is clearer
all words is a clearer name than multi term in its intent.

--- a/src/HnTrends/Views/Home/Index.cshtml
+++ b/src/HnTrends/Views/Home/Index.cshtml
@@ -14,9 +14,9 @@
     <label for="search" style="margin-top: 25px;">Enter a search term:</label>
     <input name="id" type="text" min="2" id="search" />
     <button type="submit">Search</button>
-    <label for="multiterm" id="multiterm-label" title="For a search containing multiple words the story must contain all words.">
+    <label for="allwords" id="allwords-label" title="For a search containing multiple words the story must contain all words.">
         Search result must match all words: 
-        <input type="checkbox" name="multiterm" id="multiterm" value="true" checked />
+        <input type="checkbox" name="allwords" id="allwords" value="true" checked />
     </label>
 </form>
 
